--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@mantine/core": "7.17.4",
     "@mantine/hooks": "7.17.4",
     "@phosphor-icons/react": "^2.1.7",
+    "@reduxjs/toolkit": "^2.6.1",
+    "@tabler/icons-react": "^3.31.0",
+    "js-cookie": "^3.0.5",
     "next": "15.2.4",
     "next-intl": "4.0.2",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@types/node": "22.13.11",
