--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts", 
+    "next.config.mjs"
   ],
   "exclude": [
     "node_modules"
